= Version History =
x.x:

- added: discussion widget from widget manager
- added: group_forum_topics widget from widget manager
- added: group_news widget from widget manager
- added: index_groups widget from widget manager
- added: group sidebar cleanup feature
- removed: index_discussions widget
- fixed: depricated notice in invitations overview
- fixed: url error in invitation

2.2 (2012-05-07):

- added: featured group widget
- added: a index widget (for Widget Manager) to show the latest discussions
- added: widget title link for group membership (in combination with Widget Manager)
- added: option to invite all friends or all site members (admin only)
- fixed: outstanding invitations and membership request not always cleaned up
- fixed: incorrect widget title for group members
- fixed: deprecated notices in combination with widget_manager
- fixed: pagination in group members widget
- fixed: wrong action link in remove invitation
- fixed: bug with creating group invitations
- fixed: PHP notices and warnings
- changed: sending of group invite e-mails to be more generic
- changed: restored limited functionality of group activity river

2.1 (2012-04-16):

- added: option to limit group creation to site administrators
- fixed: language error in group sorting (thanks to LeeUK)
- fixed: depricated notice getOwner() => getOwnerGUID()

2.0 BETA 1 (2012-01-17):

- changed: migrated the plugin to Elgg 1.8

1.9 (2011-12-05):

- added: option for group admins to show group widgets to non members in case of a closed group
- changed: activity filter in group river widget (now more advanced)
- changed: group status (open/closed) CSS
- changed: moved changelog to CHANGES.txt in preperation for Elgg 1.8
- changed: plugin information to README.txt in preperation for Elgg 1.8

1.8 (2011-11-11):

- added: activity filter in group river widget
- added: group listing filter: open and closed
- added: group status (open/closed) in owner_block and group stats