@@ -9,6 +9,7 @@ x.x:
 - removed: index_discussions widget
 - fixed: depricated notice in invitations overview
 - fixed: url error in invitation
+- fixed: PHP wanring in group_river_widget
 
 2.2 (2012-05-07):
 
